--- a/titreDeLOeuvre.html
+++ b/titreDeLOeuvre.html
@@ -120,10 +120,10 @@
                     </div>
                     <div class="col-md-12 d-flex justify-content-between">
                         <button class="btn btn-success btn-lg mt-5 buy">Acheter l'oeuvre <i class="fab fa-amazon"></i></button>
-                        <button class="btn btn-outline-danger btn-lg mt-5 recapitulatifs">Voir recapitulatifs des notes</button>
+                        <button class="btn btn-outline-danger btn-lg mt-5 recapitulatifs">Voir récapitulatif des notes</button>
                     </div>
                 </div>
-                <a href="xml/livres.xml" onclick="download()" download="titreOeuvre.xml">Télecharger informations oeuvre au format XML</a> 
+                <a href="xml/livres.xml" onclick="download()" download="titreOeuvre.xml">Télécharger informations oeuvre au format XML</a> 
             </div>
         </div>
         </div>
