--- a/connexion.html
+++ b/connexion.html
@@ -113,7 +113,7 @@
                   </div>
                   <label for="motivation">Vos motivations ou commentaires :</label><br>
                   <textarea name="motivation" id="motivation" cols="56" rows="5" class="mb-3"></textarea>
-                  <p>Télecharger PDF oeuvre + jaquette : (auteur seulement)</p>
+                  <p>Télécharger PDF oeuvre + jaquette : (auteur seulement)</p>
 
                   <button type="submit" class="btn btn-dark m-1 col-md-5">Oeuvre PDF <i
                       class="fas fa-folder-plus mx-2"></i></button>
