--- a/recapitulatifNotes.html
+++ b/recapitulatifNotes.html
@@ -87,7 +87,7 @@
                     <table class="table">
                         <thead class="thead-dark">
                           <tr>
-                            <th>Critère de notation</th>
+                            <th>Critères de notation</th>
                             <th class="text-center">Moyenne</th> 
                           </tr>
                         </thead>
@@ -115,7 +115,7 @@
                         </tbody>
                       </table>
                     
-                        <button class="btn btn-success btn-lg mt-5 retourNotes">Retour page notes</button>
+                        <button class="btn btn-success btn-lg mt-5 retourNotes">Retour page notation</button>
 
                     </div>
                 </div>
